--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="font-general">
-  <div class="overflow-hidden bg-[url('/src/assets/imgs/common/background.avif')]" id="root"></div>
+  <div class="overflow-hidden bg-[url('/src/assets/imgs/common/background.avif')] bg-no-repeat bg-cover" id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 
 </body>
