fix: adição de favicon, correção de texto e remoção de link desnecessário no index.html

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>portfolio</title>
+  <title>Portfolio - André Chaibe</title>
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+  <link rel="shortcut icon" href="./src/assets/imgs/common/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="font-general">
-  <div class="overflow-hidden bg-[url('/src/assets/imgs/common/background.avif')] bg-no-repeat bg-cover" id="root"></div>
+  <div class="overflow-hidden bg-[url('/src/assets/imgs/common/background.avif')] bg-no-repeat bg-cover" id="root">
+  </div>
   <script type="module" src="/src/main.jsx"></script>
 
 </body>
